kagi-mcp/src/format/snapshots/kagi_mcp__format__extract__tests__when_extract_data_has_no_markdown_then_should_skip_content.snap
---
source: kagi-mcp/src/format/extract.rs
expression: "format_extract_markdown(&response).replace(\"\\r\\n\", \"\\n\")"
---
## Extracted Content

### https://example.com/empty

---
