kagi-mcp/src/format/snapshots/kagi_mcp__format__extract__tests__when_extract_error_without_message_then_should_use_fallback.snap
---
source: kagi-mcp/src/format/extract.rs
expression: "format_extract_markdown(&response).replace(\"\\r\\n\", \"\\n\")"
---
## Extracted Content

### https://example.com/err

**Extraction failed:** Unknown error
