kagi-mcp/src/format/snapshots/kagi_mcp__format__extract__tests__when_extract_has_data_and_errors_then_should_include_both.snap
---
source: kagi-mcp/src/format/extract.rs
expression: "format_extract_markdown(&response).replace(\"\\r\\n\", \"\\n\")"
---
## Extracted Content

### https://example.com/ok

Successful content.

---

### https://example.com/bad

**Extraction failed:** Server Error
