kagi-mcp/src/format/snapshots/kagi_mcp__format__extract__tests__when_extract_has_fallback_message_then_should_render_as_content.snap
---
source: kagi-mcp/src/format/extract.rs
expression: "result.replace(\"\\r\\n\", \"\\n\")"
---
## Extracted Content

### https://example.com/unavailable

This URL could not be extracted. The content was not available.

---
