kagi-mcp/src/format/snapshots/kagi_mcp__format__extract__tests__when_extract_has_multiple_data_items_then_should_show_all.snap
---
source: kagi-mcp/src/format/extract.rs
expression: "format_extract_markdown(&response).replace(\"\\r\\n\", \"\\n\")"
---
## Extracted Content

### https://example.com/a

Content A.

---

### https://example.com/b

Content B.

---
