kagi-mcp/src/format/snapshots/kagi_mcp__format__extract__tests__when_extract_is_empty_then_should_return_no_content.snap
---
source: kagi-mcp/src/format/extract.rs
expression: "format_extract_markdown(&response).replace(\"\\r\\n\", \"\\n\")"
---
No content extracted.
