kagi-mcp/src/format/snapshots/kagi_mcp__format__extract__tests__when_extract_succeeds_then_should_format_content.snap
---
source: kagi-mcp/src/format/extract.rs
expression: "format_extract_markdown(&response).replace(\"\\r\\n\", \"\\n\")"
---
## Extracted Content

### https://example.com

# Hello
World

---
